--- a/example-project-directory/composer.json
+++ b/example-project-directory/composer.json
@@ -2,40 +2,49 @@
 	"name": "typo3/cms-base-distribution",
 	"description" : "TYPO3 CMS Base Distribution",
 	"license": "GPL-2.0-or-later",
-	"type": "project",
 	"config": {
 		"allow-plugins": {
 			"typo3/class-alias-loader": true,
 			"typo3/cms-composer-installers": true
 		},
 		"platform": {
-			"php": "8.1.1"
+			"php": "7.4.1"
 		},
 		"sort-packages": true
 	},
 	"require": {
-		"typo3/cms-backend": "^12.1.0",
-		"typo3/cms-belog": "^12.1.0",
-		"typo3/cms-beuser": "^12.1.0",
-		"typo3/cms-core": "^12.1.0",
-		"typo3/cms-dashboard": "^12.1.0",
-		"typo3/cms-extbase": "^12.1.0",
-		"typo3/cms-extensionmanager": "^12.1.0",
-		"typo3/cms-felogin": "^12.1.0",
-		"typo3/cms-filelist": "^12.1.0",
-		"typo3/cms-fluid": "^12.1.0",
-		"typo3/cms-fluid-styled-content": "^12.1.0",
-		"typo3/cms-form": "^12.1.0",
-		"typo3/cms-frontend": "^12.1.0",
-		"typo3/cms-impexp": "^12.1.0",
-		"typo3/cms-info": "^12.1.0",
-		"typo3/cms-install": "^12.1.0",
-		"typo3/cms-rte-ckeditor": "^12.1.0",
-		"typo3/cms-seo": "^12.1.0",
-		"typo3/cms-setup": "^12.1.0",
-		"typo3/cms-sys-note": "^12.1.0",
-		"typo3/cms-t3editor": "^12.1.0",
-		"typo3/cms-tstemplate": "^12.1.0",
-		"typo3/cms-viewpage": "^12.1.0"
+		"helhum/typo3-console": "^7.0.2",
+		"typo3/cms-backend": "^11.5.0",
+		"typo3/cms-belog": "^11.5.0",
+		"typo3/cms-beuser": "^11.5.0",
+		"typo3/cms-core": "^11.5.0",
+		"typo3/cms-dashboard": "^11.5.0",
+		"typo3/cms-extbase": "^11.5.0",
+		"typo3/cms-extensionmanager": "^11.5.0",
+		"typo3/cms-felogin": "^11.5.0",
+		"typo3/cms-filelist": "^11.5.0",
+		"typo3/cms-fluid": "^11.5.0",
+		"typo3/cms-fluid-styled-content": "^11.5.0",
+		"typo3/cms-form": "^11.5.0",
+		"typo3/cms-frontend": "^11.5.0",
+		"typo3/cms-impexp": "^11.5.0",
+		"typo3/cms-info": "^11.5.0",
+		"typo3/cms-install": "^11.5.0",
+		"typo3/cms-recordlist": "^11.5.0",
+		"typo3/cms-rte-ckeditor": "^11.5.0",
+		"typo3/cms-seo": "^11.5.0",
+		"typo3/cms-setup": "^11.5.0",
+		"typo3/cms-sys-note": "^11.5.0",
+		"typo3/cms-t3editor": "^11.5.0",
+		"typo3/cms-tstemplate": "^11.5.0",
+		"typo3/cms-viewpage": "^11.5.0"
+	},
+	"scripts":{
+		"typo3-cms-scripts": [
+			"typo3cms install:fixfolderstructure"
+		],
+		"post-autoload-dump": [
+			"@typo3-cms-scripts"
+		]
 	}
 }
