--- a/blog/composer.json
+++ b/blog/composer.json
@@ -6,6 +6,8 @@
     "type": "project",
     "require": {
         "php": "^8.0",
+        "doctrine/dbal": "^3.6",
+        "flipbox/lumen-generator": "^9.1",
         "laravel/lumen-framework": "^9.0"
     },
     "require-dev": {
